tests/ui/nll/issue-40510-1.rs
#![allow(unused)]

fn f() {
    let mut x: Box<()> = Box::new(());

    || {
        &mut x
    };
    //~^^ ERROR captured variable cannot escape `FnMut` closure body
}

fn main() {}
